samples/_failures_safe/1761511422_571f05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c365b8fb.c: In function ‘main’:
./samples/SAFE/__tmp_c365b8fb.c:157:15: error: expected ‘;’ at end of input
  157 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_c365b8fb.c:157:9: error: expected declaration or statement at end of input
  157 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_c365b8fb.c:157:9: error: expected declaration or statement at end of input
